fixed screwup on the visible item logic and style so no selection

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,12 @@ body {
 	color: #555;
 	border-bottom: 1px solid #ccc;
 	cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 #big-list .group-list .visible-item {
 	display: block;
